feat: Add download of .zips containing PGN file

--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,17 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "*"
+pylint = "*"
+rope = "*"
 
 [packages]
 requests = "*"
+loguru = "*"
+tqdm = "*"
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
